--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
