--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
